--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.4",
+    "@types/mdx": "^2.0.10",
     "next": "14.0.4",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
