--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
