--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && gcloud app deploy --version v2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -15,8 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "react-responsive": "^9.0.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
