--- a/app.yaml
+++ b/app.yaml
@@ -12,8 +12,8 @@ runtime: nodejs20
 
 instance_class: F1
 
-# automatic_scaling:
-#     max_instances: 1
+automatic_scaling:
+    max_instances: 1
 
 handlers:
   - url: /.*
